FIxed dropdown functionality on mobile

--- a/index_queries.css
+++ b/index_queries.css
@@ -47,7 +47,7 @@
     }
 
     #mobile-nav {
-        display: block;  
+        display: inline;  
         margin-top: 1rem;     
     }
 
