--- a/recursos.css
+++ b/recursos.css
@@ -11,7 +11,7 @@
 }
 
 .recursos-banner-text {
-    background-color: var(--col1);
+    background-color: var(--col5);
     transform: skewX(-25deg);
     padding-left: 30vw;
     margin-left: -7rem;
@@ -20,7 +20,7 @@
 .recursos-banner-text h3 {
     transform: skewX(25deg);
     font-size: 1.5rem;
-    color: var(--col2);
+    color: var(--col1);
     position: relative;
     left: -85%;
     top: 7vh;
@@ -38,7 +38,7 @@
 }
 
 .recursos-banner-text-end {
-    background-color: var(--col1);
+    background-color: var(--col5);
     transform: skewX(-25deg);
     padding-left: 20vw;
     margin-right: -5rem;
@@ -47,7 +47,7 @@
 .recursos-banner-text-end h3 {
     transform: skewX(25deg);
     font-size: 1.5rem;
-    color: var(--col2);
+    color: var(--col1);
     position: relative;
     left: -50%;
     top: 7vh;
@@ -98,8 +98,8 @@
     margin-right: -2rem;
  }
 .recursos-title h2 {
-    background-color: var(--col4);
-    color: var(--col1);
+    background-color: var(--col1);
+    color: var(--col2);
     font-size: 2.5rem ;
     width: 100%;
     padding-left: 4rem;
